Add BapsiPacket class and tests

--- a/BapsiNet.Test/BapsiNet.Test.csproj
+++ b/BapsiNet.Test/BapsiNet.Test.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BapsiDummyServer\BapsiDummyServer.csproj" />
     <ProjectReference Include="..\BapsiNet\BapsiNet.csproj" />
   </ItemGroup>
 
